[arquillian/arquillian-extension-liferay#21] Auto SF